# QuLearn

./: .flake8  .gitallowed  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ToDo.md  ToDoNotes.txt  environment.yaml  environment.yml  pyproject.toml
.github/workflows/: main.yml  publish.yml  python-compatibility.yml
docs/: api.rst  conf.py  index.rst  installation.rst  requirements.txt
examples/capacity_measures/fat_shattering/: fat_iqpe_reup_parity.py  fat_iqpe_reup_parity.yaml  run_fat_iqpe_reup_parity.py
examples/capacity_measures/fat_shattering/results/fat_iqpe_reup_parity/: 0da2c06c-a102-41ea-a19c-44b24096e853.json  (+3 more)
examples/capacity_measures/memory/: cap_iqpe_reup_parity.py  inspect_results_cap.ipynb  run_cap_iqpe_reup_parity.py
examples/capacity_measures/rademacher/: inspect_results_rad.ipynb  rademacher_iqpe_reup_parity.py
examples/compare_models/: model_builder.py  model_config.py  model_configs.json  test_model_builder.ipynb  test_model_builder.py
examples/compare_models/capacity_measures/effdim/: effdim.out  effdim.py  effdim_defaults.yaml  inspect_results.ipynb
examples/compare_models/capacity_measures/fat/: fat.out  fat.py  fat_defaults.yaml  inspect_results.ipynb
examples/compare_models/capacity_measures/memory/: inspect_results.ipynb  memory.out  memory.py  memory_defaults.yaml
examples/compare_models/capacity_measures/rademacher/: inspect_results.ipynb  rademacher.out  rademacher.py  rademacher_defaults.yaml
experiments/: capacity.ipynb  estimate_capacity.py
experiments/capacity/: cap_iqpe_reup_parity.py  cap_iqpe_reup_parity.yaml  capacity.ipynb  capacity_torch_iqpe_reup_parity.py  cfg_capacity.yaml  inspect_results_cap.ipynb  iqpe_reup_parity.py  iqpe_reup_parity.yaml  run_cap_iqpe_reup_parity.py  run_capacity_torch.py  run_iqpe_reup_parity.py
experiments/fat_shattering/: cfg_fat.yaml  fat_iqpe_reup_parity.py  fat_iqpe_reup_parity.yaml  fat_torch_iqpe_reup_parity.py  inspect_results_fat.ipynb  iqpe_reup_parity.py  run_fat_iqpe_reup_parity.py  run_fat_torch.py  run_iqpe_reup_parity.py
experiments/rademacher/: rademacher_iqpe_reup_parity.py  rademacher_iqpe_reup_parity.yaml  run_rad_iqpe_reup_parity.py
prototypes/: capacity.ipynb  testing.ipynb
qml_mor/: capacity.ipynb  capacity.py  capacity_torch.py  datagen.py  fat.py  fat_torch.py  loss.py  model.ipynb  model_pennylane.ipynb  models.py  optimize.py  rademacher.py  train.py  trainer.py  utils.py
qulearn/: __init__.py  datagen.py  fat.py  fim.py  hat_basis.py  loss.py  memory.py  mps.py  mps_kronprod.py  observable.py  qkernel.py  qlayer.py  rademacher.py  trainer.py  types.py  utils.py
scratch/: scratch.ipynb  scratch2.ipynb  scratch3.ipynb  scratch4.ipynb  scratch5.ipynb
tests/: test_capacity.py  test_capacity_torch.py  test_datagen.py  test_fat.py  test_fat_torch.py  test_fim.py  test_hat_basis.py  test_loss.py  test_memory.py  test_models.py  test_mps.py  test_mps_kronprod.py  test_observable.py  test_optimize.py  test_qkernel.py  test_qlayer.py  test_rademacher.py  test_train.py  test_trainer.py  test_utils.py
(+77 files in other folders)
