[tool.poetry]
name = "qulearn"
version = "0.1.0"
description = "Streamlining quantum and classical machine learning model development."
authors = ["Mazen Ali <mazen.ali@itwm.fraunhofer.de>"]
readme = "README.md"
packages = [{include = "qulearn"}]

[tool.poetry.dependencies]
python = "^3"
pythreejs = "^2.4.1"
ipywidgets = "7.7.1"
matplotlib = "^3.6.3"
scikit-learn = "^1.2.1"
pennylane = "^0.28.0"
torch = "^2.0.1"
pyyaml = "^6.0"
pennylane-lightning = "^0.29.0"
torch-tb-profiler = "^0.4.1"
tensorflow = "^2.12.0"
protobuf = "4.23.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pytest = "^7.3.1"
docformatter = "^1.7.1"
pyment = "^0.3.3"
sphinx = "^7.0.1"

[tool.mypy]
[[tool.mypy.overrides]]
module = "pennylane"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.stats"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "conf"
ignore_errors = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
